--- a/Leer_Numeros.ipynb
+++ b/Leer_Numeros.ipynb
@@ -16,6 +16,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state":{
         "cf67d0f33572474cb23050a34fdfad57": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
