--- a/Leer_Numeros.ipynb
+++ b/Leer_Numeros.ipynb
@@ -20,7 +20,7 @@
         "cf67d0f33572474cb23050a34fdfad57": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
+          "model_module_version": "1.5.0",}
           "state": {
             "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
