--- a/Leer_Numeros.ipynb
+++ b/Leer_Numeros.ipynb
@@ -15,30 +15,34 @@
       "name": "python"
     },
     "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "state":{
-        "cf67d0f33572474cb23050a34fdfad57": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",}
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_79bd78ff93f949168a5cdb4a2f1c7ecf",
-              "IPY_MODEL_271ee87b3b394804921d873453d881d3",
-              "IPY_MODEL_6607eaecbbee4017a9ddeba50f680116"
-            ],
-            "layout": "IPY_MODEL_54a7ef61704148518b4b8db9333f76c6"
-          }
-        },
+  "application/vnd.jupyter.widget-state+json": {
+    "state": {
+      "cf67d0f33572474cb23050a34fdfad57": {
+        "model_module": "@jupyter-widgets/controls",
+        "model_name": "HBoxModel",
+        "model_module_version": "1.5.0",
+        "state": {
+          "_dom_classes": [],
+          "_model_module": "@jupyter-widgets/controls",
+          "_model_module_version": "1.5.0",
+          "_model_name": "HBoxModel",
+          "_view_count": null,
+          "_view_module": "@jupyter-widgets/controls",
+          "_view_module_version": "1.5.0",
+          "_view_name": "HBoxView",
+          "box_style": "",
+          "children": [
+            "IPY_MODEL_79bd78ff93f949168a5cdb4a2f1c7ecf",
+            "IPY_MODEL_271ee87b3b394804921d873453d881d3",
+            "IPY_MODEL_6607eaecbbee4017a9ddeba50f680116"
+          ],
+          "layout": "IPY_MODEL_54a7ef61704148518b4b8db9333f76c6"
+        }
+      }
+    }
+  }
+}
+
         "79bd78ff93f949168a5cdb4a2f1c7ecf": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
